--- a/87cb8054003093194fca9e8b417296018cbffb68.css
+++ b/87cb8054003093194fca9e8b417296018cbffb68.css
@@ -234,12 +234,6 @@ sub {
 img {
     border: 0
     }
-/**
- * Correct overflow not hidden in IE 9/10/11.
- */
-svg:not(:root) {
-    overflow: hidden
-    }
 /* Grouping content
    ========================================================================== */
 /**
@@ -474,15 +468,11 @@ mention token. */
 /* ==================================================================== */
 /* Focus Feedback */
 /* ==================================================================== */
-.notion-focusable {
-    transition: box-shadow 300ms
-    }
-/* NOTE: do not try to combine these next two rules, if you do, it will
-   break the blue focus ring on Safari */
 .notion-focusable-within:focus-within {
     box-shadow: rgba(35, 131, 226, 0.57) 0 0 0 1px inset, rgba(35, 131, 226, 0.35) 0 0 0 2px !important
     }
-.notion-focusable:focus-visible {
+/* Focusable tokens inside the editor should show focus ring */
+.notion-focusable-token:focus-visible {
     box-shadow: rgba(35, 131, 226, 0.57) 0 0 0 1px inset, rgba(35, 131, 226, 0.35) 0 0 0 2px !important
     }
 /* ==================================================================== */
@@ -509,6 +499,11 @@ mention token. */
 /* ==================================================================== */
 /* Animation */
 /* ==================================================================== */
+/* TODO(pm-announcement): Remove after launch */
+.pm-announcement-modal-fadein {
+    animation: fadein ease-in 1s;
+    animation-fill-mode: both
+    }
 .notion-fadein {
     animation: fadein ease-in 330ms
     }
@@ -576,7 +571,7 @@ html.notion-front-page .notion-app-inner {
 /* ==================================================================== */
 /* Contenteditable placeholders.
 /* ==================================================================== */
-[contenteditable]:empty:after, .forcePlaceholder:after {
+[contenteditable]:empty:after {
     content: attr(placeholder)
     }
 /* ==================================================================== */
@@ -648,6 +643,47 @@ html.notion-front-page .notion-app-inner {
         }
     }
 /* ==================================================================== */
+/* Loading Dots (For AI).
+/* ==================================================================== */
+.loading-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+    width: 16px;
+    height: 16px
+    }
+.loading-dot {
+    width: 4px;
+    height: 4px;
+    opacity: 0.4;
+    background-color: #a782c3;
+    border-radius: 100%;
+    animation-duration: 0.5s;
+    animation-name: dotdance;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(0.11, 0, 0.5, 0)
+    }
+.loading-dots .loading-dot:nth-child(1) {
+    animation-delay: 0.2s
+    }
+.loading-dots .loading-dot:nth-child(2) {
+    animation-delay: 0.4s
+    }
+.loading-dots .loading-dot:nth-child(3) {
+    animation-delay: 0.6s
+    }
+@keyframes dotdance {
+    0% {
+        transform: translateY(0);
+        opacity: 0.4;
+        } 100% {
+        transform: translateY(2px);
+        opacity: 0.9;
+        }
+    }
+/* ==================================================================== */
 /* Sync spinner.
 /* ==================================================================== */
 .sync-spinner {
@@ -663,7 +699,8 @@ html.notion-front-page .notion-app-inner {
 /* ==================================================================== */
 .notion-shimmer {
     overflow: hidden;
-    position: relative
+    position: relative;
+    z-index: 0
     }
 .notion-shimmer::before {
     content: "";
@@ -1029,6 +1066,19 @@ table > tr {
     /* Notion brand blue */
     background: rgba(35, 131, 226, 0.28)
     }
+/**
+ * Safari 16.4 applies the ::selection pseudo-element to selectable
+ * blocks that are part of the user's selection, which makes
+ * it look like the user is making both a block selection *and* a
+ * multi-text selection.  This ensures that the selectable blocks
+ * don't appear selected in this case.
+ *
+ * (Note that actual block selections will still appear normally, as
+ * that styling is done through a completely different code path.)
+ */
+.notion-selectable::selection {
+    background: transparent
+    }
 #notion-app b {
     font-weight: 600
     }
@@ -1083,6 +1133,24 @@ table > tr {
         filter: brightness(1.15);
         } 100% {
         filter: brightness(1);
+        }
+    }
+@keyframes shake {
+    0% {
+        margin-left: 0rem;
+        } 25% {
+        margin-left: 0.2rem;
+        } 75% {
+        margin-left: -0.2rem;
+        } 100% {
+        margin-left: 0rem;
+        }
+    }
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        } 100% {
+        opacity: 1;
         }
     }
 /*!****************************************************************************!*\
@@ -1180,10 +1248,10 @@ table > tr {
 .notion-light-theme .token.namespace {
     opacity: 0.7
     }
-.notion-light-theme .token.property, .notion-light-theme .token.tag, .notion-light-theme .token.boolean, .notion-light-theme .token.number, .notion-light-theme .token.constant, .notion-light-theme .token.symbol, .notion-light-theme .token.deleted {
+.notion-light-theme .token.property, .notion-light-theme .token.tag, .notion-light-theme .token.boolean, .notion-light-theme .token.number, .notion-light-theme .token.constant, .notion-light-theme .token.symbol, .notion-light-theme .token.deleted, .notion-light-theme .token.deleted + .token.line {
     color: #905
     }
-.notion-light-theme .token.selector, .notion-light-theme .token.attr-name, .notion-light-theme .token.string, .notion-light-theme .token.char, .notion-light-theme .token.builtin, .notion-light-theme .token.inserted {
+.notion-light-theme .token.selector, .notion-light-theme .token.attr-name, .notion-light-theme .token.string, .notion-light-theme .token.char, .notion-light-theme .token.builtin, .notion-light-theme .token.inserted, .notion-light-theme .token.inserted + .token.line {
     color: #690
     }
 .notion-light-theme .token.operator, .notion-light-theme .token.entity, .notion-light-theme .token.url, .notion-light-theme .language-css .token.string, .notion-light-theme .style .token.string {
@@ -1271,7 +1339,7 @@ table > tr {
 .notion-dark-theme .token.property, .notion-dark-theme .token.tag, .notion-dark-theme .token.boolean, .notion-dark-theme .token.number, .notion-dark-theme .token.constant, .notion-dark-theme .token.symbol {
     color: hsl(350, 40%, 70%)
     }
-.notion-dark-theme .token.selector, .notion-dark-theme .token.attr-name, .notion-dark-theme .token.string, .notion-dark-theme .token.char, .notion-dark-theme .token.builtin, .notion-dark-theme .token.inserted {
+.notion-dark-theme .token.selector, .notion-dark-theme .token.attr-name, .notion-dark-theme .token.string, .notion-dark-theme .token.char, .notion-dark-theme .token.builtin, .notion-dark-theme .token.inserted, .notion-dark-theme .token.inserted + .token.line {
     color: hsl(75, 70%, 60%)
     }
 .notion-dark-theme .token.operator, .notion-dark-theme .token.entity, .notion-dark-theme .token.url, .notion-dark-theme .language-css .token.string, .notion-dark-theme .style .token.string, .notion-dark-theme .token.variable {
@@ -1292,7 +1360,7 @@ table > tr {
 .notion-dark-theme .token.entity {
     cursor: help
     }
-.notion-dark-theme .token.deleted {
+.notion-dark-theme .token.deleted, .notion-dark-theme .token.deleted + .token.line {
     color: red
     }
 /*!********************************************************************************!*\
