--- a/6c1f1ad60e7d1fc8a26fb0f3b45314fe5fe22328.css
+++ b/6c1f1ad60e7d1fc8a26fb0f3b45314fe5fe22328.css
@@ -499,11 +499,6 @@ mention token. */
 /* ==================================================================== */
 /* Animation */
 /* ==================================================================== */
-/* TODO(pm-announcement): Remove after launch */
-.pm-announcement-modal-fadein {
-    animation: fadein ease-in 1s;
-    animation-fill-mode: both
-    }
 .notion-fadein {
     animation: fadein ease-in 330ms
     }
@@ -1311,10 +1306,10 @@ table > tr {
 .notion-light-theme .token.namespace {
     opacity: 0.7
     }
-.notion-light-theme .token.property, .notion-light-theme .token.tag, .notion-light-theme .token.boolean, .notion-light-theme .token.number, .notion-light-theme .token.constant, .notion-light-theme .token.symbol, .notion-light-theme .token.deleted, .notion-light-theme .token.deleted + .token.line {
+.notion-light-theme .token.property, .notion-light-theme .token.tag, .notion-light-theme .token.boolean, .notion-light-theme .token.number, .notion-light-theme .token.constant, .notion-light-theme .token.symbol, .notion-light-theme .token.deleted {
     color: #905
     }
-.notion-light-theme .token.selector, .notion-light-theme .token.attr-name, .notion-light-theme .token.string, .notion-light-theme .token.char, .notion-light-theme .token.builtin, .notion-light-theme .token.inserted, .notion-light-theme .token.inserted + .token.line {
+.notion-light-theme .token.selector, .notion-light-theme .token.attr-name, .notion-light-theme .token.string, .notion-light-theme .token.char, .notion-light-theme .token.builtin, .notion-light-theme .token.inserted {
     color: #690
     }
 .notion-light-theme .token.operator, .notion-light-theme .token.entity, .notion-light-theme .token.url, .notion-light-theme .language-css .token.string, .notion-light-theme .style .token.string {
@@ -1402,7 +1397,7 @@ table > tr {
 .notion-dark-theme .token.property, .notion-dark-theme .token.tag, .notion-dark-theme .token.boolean, .notion-dark-theme .token.number, .notion-dark-theme .token.constant, .notion-dark-theme .token.symbol {
     color: hsl(350, 40%, 70%)
     }
-.notion-dark-theme .token.selector, .notion-dark-theme .token.attr-name, .notion-dark-theme .token.string, .notion-dark-theme .token.char, .notion-dark-theme .token.builtin, .notion-dark-theme .token.inserted, .notion-dark-theme .token.inserted + .token.line {
+.notion-dark-theme .token.selector, .notion-dark-theme .token.attr-name, .notion-dark-theme .token.string, .notion-dark-theme .token.char, .notion-dark-theme .token.builtin, .notion-dark-theme .token.inserted {
     color: hsl(75, 70%, 60%)
     }
 .notion-dark-theme .token.operator, .notion-dark-theme .token.entity, .notion-dark-theme .token.url, .notion-dark-theme .language-css .token.string, .notion-dark-theme .style .token.string, .notion-dark-theme .token.variable {
@@ -1423,7 +1418,7 @@ table > tr {
 .notion-dark-theme .token.entity {
     cursor: help
     }
-.notion-dark-theme .token.deleted, .notion-dark-theme .token.deleted + .token.line {
+.notion-dark-theme .token.deleted {
     color: red
     }
 /*!**********************************************************************************!*\
